💃💼 Checkpoint ./map.html:79396381/114

--- a/public/map.html
+++ b/public/map.html
@@ -18,7 +18,7 @@
   <script>
     // ── CONFIGURE THESE ──────────────────────────────
     const PROJECT = "goofy-rattle-casquette";          // your Glitch name
-    const MAPBOX_TOKEN = "pk.YOUR_MAPBOX_TOKEN";  // your Mapbox public token
+    const MAPBOX_TOKEN = "pk.eyJ1IjoiYXNpZGF0LXRlc3QiLCJhIjoiY21hM3ExbnNpMmt1NjJrc21hemppdHlmZyJ9.P8Olfvt6pYjiyzHHOkAG4g";  // your Mapbox public token
     // ────────────────────────────────────────────────
 
     // 1️⃣ Read recId from URL
