📻🌥 Checkpoint ./server.js:79396381/7799 ./public/map.html:79396381/10754

--- a/public/map.html
+++ b/public/map.html
@@ -95,7 +95,7 @@
             drawTrail("route_tampered",   "orange", "icon-orange");
             drawTrail("route_stolen",     "yellow", "icon-yellow");
 
-            // markers & popups
+            // markers & popups with timestamps & photo
             L.geoJSON(data, {
               pointToLayer(feature, latlng) {
                 const ev = feature.properties.event;
@@ -107,11 +107,29 @@
                 const marker = L.circleMarker(latlng, {
                   radius: 8, color, fillColor: fill, fillOpacity: 1, weight: 2
                 });
-                marker.bindPopup(
-                  `<strong>${ev.toUpperCase()}</strong><br>` +
-                  `Status: ${feature.properties.status || "N/A"}<br>` +
-                  `Left: ${feature.properties.left || "N/A"}`
-                );
+
+                // build popup html
+                let html = `<strong>${ev.toUpperCase()}</strong><br>`;
+                html += `Status: ${feature.properties.status || "N/A"}<br>`;
+                html += `Left: ${feature.properties.left || "N/A"}<br>`;
+
+                if (ev === "delivered") {
+                  if (feature.properties.deliveredTime) {
+                    const dt = new Date(feature.properties.deliveredTime);
+                    html += `Delivered At: ${dt.toLocaleString()}<br>`;
+                  }
+                  if (feature.properties.photoUrl) {
+                    html += `<img src="${feature.properties.photoUrl}" alt="Delivery Photo" style="max-width:200px; margin-top:5px; display:block;"/>`;
+                  }
+                }
+                else if (ev === "opened") {
+                  if (feature.properties.openedTime) {
+                    const ot = new Date(feature.properties.openedTime);
+                    html += `Opened At: ${ot.toLocaleString()}<br>`;
+                  }
+                }
+
+                marker.bindPopup(html);
                 return marker;
               }
             }).addTo(map);
