--- a/public/map.html
+++ b/public/map.html
@@ -18,6 +18,28 @@
       .icon-red    { color: red;    font-size: 16px; }
       .icon-orange { color: orange; font-size: 16px; }
       .icon-yellow { color: yellow; font-size: 16px; }
+      /* Legend styling */
+      .info.legend {
+        background: rgba(255, 255, 255, 0.8);
+        backdrop-filter: blur(4px);
+        padding: 8px;
+        border-radius: 4px;
+        box-shadow: 0 0 6px rgba(0,0,0,0.3);
+        font-size: 14px;
+        line-height: 1.4;
+      }
+      .info.legend h4 {
+        margin: 0 0 4px;
+        font-size: 16px;
+      }
+      .info.legend div {
+        margin-bottom: 4px;
+      }
+      .info.legend span {
+        display: inline-block;
+        vertical-align: middle;
+        margin-right: 6px;
+      }
     </style>
   </head>
   <body>
@@ -43,6 +65,28 @@
         `https://api.mapbox.com/styles/v1/{id}/tiles/{z}/{x}/{y}?access_token=${MAPBOX_TOKEN}`,
         { id: "mapbox/streets-v11", tileSize: 512, zoomOffset: -1 }
       ).addTo(map);
+
+      // Add legend control
+      const legend = L.control({ position: 'topright' });
+      legend.onAdd = function(map) {
+        const div = L.DomUtil.create('div', 'info legend');
+        div.innerHTML = `
+          <h4>Legend</h4>
+          <div><span style="width:12px; height:12px; background:lightgreen;"></span>Zone 1: Property lot</div>
+          <div><span style="width:12px; height:12px; background:lightblue;"></span>Zone 2: Neighbours</div>
+          <div><span style="width:12px; height:12px; background:orange;"></span>Zone 3: Street area</div>
+          <hr>
+          <div><span style="width:12px; height:12px; border-radius:6px; background:green;"></span>Delivered location</div>
+          <div><span style="width:12px; height:12px; border-radius:6px; background:lightgrey;"></span>Opened after delivery</div>
+          <div><span style="width:12px; height:12px; border-radius:6px; background:skyblue;"></span>Delivery address</div>
+          <hr>
+          <div><span style="color:red; font-weight:bold;">×</span>In-transit route</div>
+          <div><span style="color:orange; font-weight:bold;">×</span>Tampered route</div>
+          <div><span style="color:yellow; font-weight:bold;">×</span>Stolen route</div>
+        `;
+        return div;
+      };
+      legend.addTo(map);
 
       // ── STOP AUTO‐FIT AFTER USER MOVES ──
       let userMoved = false;
