🐏🌊 Checkpoint ./public/map.html:79396381/177

--- a/public/map.html
+++ b/public/map.html
@@ -17,7 +17,7 @@
       }
       .icon-red    { color: red;    font-size: 16px; }
       .icon-orange { color: orange; font-size: 16px; }
-      .icon-yellow { color: yellow; font-size: 16px; }
+      .icon-purple { color: purple; font-size: 16px; }
       /* Legend styling */
       .info.legend {
         background: rgba(255, 255, 255, 0.8);
@@ -71,7 +71,7 @@
       legend.onAdd = function(map) {
         const div = L.DomUtil.create('div', 'info legend');
         div.innerHTML = `
-          <h4>Legend</h4>
+          <h4>Key</h4>
           <!-- Zones -->
           <div><span style="width:12px; height:12px; background:lightgreen;"></span>Zone 1: Property lot</div>
           <div><span style="width:12px; height:12px; background:lightblue;"></span>Zone 2: Neighbours</div>
@@ -84,7 +84,7 @@
           </div>
           <div>
             <img src="https://cdn.glitch.global/61e7714e-e703-4205-9c55-20187cbf8b01/opened.png?v=1748342713386" width="16" height="16" style="vertical-align:middle;margin-right:6px;"/>
-            Opened after delivery
+            Opened location
           </div>
           <div>
             <img src="https://cdn.glitch.global/61e7714e-e703-4205-9c55-20187cbf8b01/address.png?v=1748342431881" width="16" height="16" style="vertical-align:middle;margin-right:6px;"/>
@@ -94,7 +94,7 @@
           <!-- Trails -->
           <div><span style="color:red; font-weight:bold;">×</span>In-transit route</div>
           <div><span style="color:orange; font-weight:bold;">×</span>Tampered route</div>
-          <div><span style="color:yellow; font-weight:bold;">×</span>Stolen route</div>
+          <div><span style="color:purple; font-weight:bold;">×</span>Stolen route</div>
         `;
         return div;
       };
@@ -150,7 +150,7 @@
             }
             drawTrail("route_in_transit", "red", "icon-red");
             drawTrail("route_tampered",   "orange", "icon-orange");
-            drawTrail("route_stolen",     "yellow", "icon-yellow");
+            drawTrail("route_stolen",     "purple", "icon-purple");
 
             // markers & popups with custom address popup
             L.geoJSON(data, {
